--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 {{ show ? 'Hide' : 'Show' }} Alert
             </b-button>
             <b-alert v-model="show" class="mt-3" dismissible @dismissed="dismissed">
-                Hello {{ name }}!
+                Hola {{ name }}!
             </b-alert>
         </b-container>
     </div>
